@@ -58,8 +58,9 @@
 			<arg value="installer"/>
 			<arg value="-Dizpack.dir=${lib.dir}/IzPack"/>
 			<arg value="-Dinclude.module.scheduler=true"/>
-			<arg value="-Dinclude.feature.security.oauth=true"/>
-			<arg value="-Dinclude.feature.security.openid=true"/>
+            <!-- not using these yet -->
+			<arg value="-Dinclude.feature.security.oauth=false"/>
+			<arg value="-Dinclude.feature.security.openid=false"/>
 		</exec>
 	</target>
 	
@@ -195,6 +196,77 @@ cacheSize=${cache.size}
         <echo level="warning">Warning: About to delete everything in ${installdir}. If this not what you want to do, press ^C now! You have 5 seconds...</echo>
         <sleep seconds="5"/>
         <delete dir="${installdir}"/>
+    </target>
+    
+    <target name="backup"
+        description="back up an existing database into $backup.directory">
+        <property environment="env"/>
+        <exec
+            executable="${installdir}/bin/backup.sh">
+            <arg value="-u"/>
+            <arg value="admin"/>
+            <arg value="-p"/>
+            <arg value="${adminpassword}"/>
+            <arg value="-b"/>
+            <arg value="/db"/>
+            <arg value="-d"/>
+            <arg value="${backup.directory}"/>
+            <arg value="-ouri=xmldb:exist://"/>
+            <!-- DEBUG_OPTS seems to be the only way to force options after java.endorsed.dirs -->
+            <env key="DEBUG_OPTS" value="-Djava.endorsed.dirs=${installdir}/lib/optional:${installdir}/lib/endorsed"/>
+        </exec>    
+    </target>
+    <target name="backup-for-upgrade"
+        depends="backup"
+        description="edit the backup in $backup.directory, removing things that we do not want restored">
+        <tempfile property="exist.backup.remove.file" destDir="${java.io.tmpdir}" deleteonexit="true"/>
+        <echo file="${exist.backup.remove.file}">
+^/db/apps
+^/db/cache
+^/db/refindex
+^/db/system/config
+^/db/system/security/exist/(accounts|groups)/removed
+^/db/system/security/exist/accounts/(admin|guest)\.xml$
+^/db/data/tests
+        </echo>
+        <exec input="${exist.backup.remove.file}"
+            executable="python">
+            <arg value="opensiddur-server/setup/removeFromBackup.py"/>
+            <arg value="${backup.directory}/db"/>
+        </exec>
+    </target>
+    <target name="restore"
+        description="restore the database from (modified) backup, rerun refindex update">
+        <property environment="env"/>
+        <exec
+            executable="${installdir}/bin/backup.sh">
+            <arg value="-u"/>
+            <arg value="admin"/>
+            <arg value="-p"/>
+            <arg value="${adminpassword}"/>
+            <arg value="-r"/>
+            <arg value="${backup.directory}"/>
+            <arg value="-ouri=xmldb:exist://"/>
+            <!-- DEBUG_OPTS seems to be the only way to force options after java.endorsed.dirs -->
+            <env key="DEBUG_OPTS" value="-Djava.endorsed.dirs=${installdir}/lib/optional:${installdir}/lib/endorsed"/>
+        </exec>
+        <!-- reindex -->    
+        <exec
+            executable="${installdir}/bin/client.sh"
+            dir="${installdir}"
+            inputstring="xquery version '3.0';
+            import module namespace ridx='http://jewishliturgy.org/modules/refindex'
+            at 'xmldb:exist:///db/apps/opensiddur-server/modules/refindex.xqm'; 
+            ridx:reindex(collection('/db/data'))"
+            >
+            <arg value="-qls"/>
+            <arg value="-u"/>
+            <arg value="admin"/>
+            <arg value="-P"/>
+            <arg value="${adminpassword}"/>
+            <arg value="-x"/>
+            <env key="DEBUG_OPTS" value="-Djava.endorsed.dirs=${installdir}/lib/optional:${installdir}/lib/endorsed:${installdir}/lib/user"/>
+        </exec>
     </target>
 </project>
 
